// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout Snapshots All 1`] = `
<div
  className="sc-AxjAm dUQemZ"
>
  <div
    className="sc-AxirZ kzBiBQ ClassName"
  >
    I'm the header inside a row!
  </div>
</div>
`;

exports[`Layout Snapshots ClassName 1`] = `
<div
  className="sc-AxjAm jIzdZp ClassName"
>
  <div
    className="sc-AxirZ kzBiBQ ClassName"
  >
    I'm the header inside a row!
  </div>
</div>
`;

exports[`Layout Snapshots Item area 1`] = `
<div
  className="sc-AxjAm fikrkR"
>
  <div
    className="sc-AxirZ bDkLgX ClassName"
  >
    I'm the header inside a row!
  </div>
</div>
`;

exports[`Layout Snapshots No Children 1`] = `
<div
  className="sc-AxjAm jIzdZp"
/>
`;

exports[`Layout Snapshots No props 1`] = `
<div
  className="sc-AxjAm jIzdZp"
>
  <div
    className="sc-AxirZ kzBiBQ"
  >
    I'm the header inside a row!
  </div>
</div>
`;

exports[`Layout Snapshots columnGap 1`] = `
<div
  className="sc-AxjAm bsehrU"
>
  <div
    className="sc-AxirZ kzBiBQ ClassName"
  >
    I'm the header inside a row!
  </div>
</div>
`;

exports[`Layout Snapshots grid 1`] = `
<div
  className="sc-AxjAm fikrkR"
>
  <div
    className="sc-AxirZ kzBiBQ ClassName"
  >
    I'm the header inside a row!
  </div>
</div>
`;

exports[`Layout Snapshots isNotFlush 1`] = `
<div
  className="sc-AxjAm NRtaa"
>
  <div
    className="sc-AxirZ kzBiBQ ClassName"
  >
    I'm the header inside a row!
  </div>
</div>
`;

exports[`Layout Snapshots paddingBottom 1`] = `
<div
  className="sc-AxjAm jIzdZp"
>
  <div
    className="sc-AxirZ kzBiBQ ClassName"
  >
    I'm the header inside a row!
  </div>
</div>
`;

exports[`Layout Snapshots paddingTop 1`] = `
<div
  className="sc-AxjAm jIzdZp"
>
  <div
    className="sc-AxirZ kzBiBQ ClassName"
  >
    I'm the header inside a row!
  </div>
</div>
`;

exports[`Layout Snapshots rowGap 1`] = `
<div
  className="sc-AxjAm iWqqdw"
>
  <div
    className="sc-AxirZ kzBiBQ ClassName"
  >
    I'm the header inside a row!
  </div>
</div>
`;
